Fix navigation styles

--- a/wp-content/themes/new2/tailwind/custom/components/nav.css
+++ b/wp-content/themes/new2/tailwind/custom/components/nav.css
@@ -8,3 +8,71 @@
         display: none;
     }
 }
+.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__submenu-icon {
+    display: inline;
+}
+.wp-block-navigation:not(.has-background) .wp-block-navigation__responsive-container.is-menu-open {
+    background-color: var(--wp--preset--color--blue-dk);
+    color: #ffffff;
+    left: unset;
+}
+/* .header .wp-block-navigation__container {
+    .wp-block-navigation-item__content {
+        border-radius: 0 15px 15px 15px;
+        color: var(--wp--preset--color--blue) !important;
+        @apply font-bold tracking-widest px-5 py-1 md:py-2 lg:py-3;
+        @apply font-serif font-semibold text-lg tracking-wide text-background;
+    }
+    span.wp-block-navigation-item__label {
+        @apply text-background
+    }
+    .wp-block-navigation-item__content:hover,
+    a.wp-block-button__link.wp-element-button:hover {
+        color: var(--wp--preset--color--green-dk);
+    } */
+    /* .wp-block-navigation-item__content:hover .wp-block-navigation-item__label,
+    .wp-block-button:hover {
+        color: var(--wp--preset--color--green);
+    } */
+/* } */
+/* .header span.wp-block-navigation-item__label {
+    color: var(--wp--preset--color--blue);
+} */
+/* .header .wp-block-navigation-item__content, .header a.wp-block-button__link.wp-element-button {
+    background-color: unset;
+} */
+.header {
+    li.wp-block-navigation-item.wp-block-navigation-link {
+        color: var(--wp--preset--color--blue-dk);
+        font-weight: 700;
+        &:hover {
+            color: var(--wp--preset--color--green);
+        }
+    }
+    .wp-block-navigation__responsive-container {
+        a.wp-block-navigation-item__content,
+        a span.wp-block-navigation-item__label,
+        .wp-block-navigation-item a {
+            margin-right: 0;
+            font-size: 20px;
+            font-weight: 700;
+            color: var(--wp--preset--color--white);
+            &:hover {
+                color: #ede29f;
+            }
+        }
+        .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .has-child .wp-block-navigation__submenu-container {
+            padding-right: 0 !important;
+        }
+        .wp-block-navigation__submenu-container {
+            span.wp-block-navigation-item__label {
+                color: var(--wp--preset--color--blue-lt);
+                font-size: 16px;
+                padding-bottom: 0.5rem;
+            }
+        }
+        .wp-block-navigation-item__content:hover, .header a.wp-block-button__link.wp-element-button:hover {
+            color: var(--wp--preset--color--green-lt);
+        }
+    }
+}
